<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    android:orientation="vertical"
    tools:context=".Register">



    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="Sign Up"
        android:textSize="30dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/password"
        android:layout_marginTop="-217dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_username_icon"
        android:drawableLeft="@drawable/ic_username"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/FirstName"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/secondName"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_below="@+id/password"
        android:layout_marginTop="-161dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_username_icon"
        android:drawableLeft="@drawable/ic_username"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/SecondName"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/lg_emailAddress"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/welcome"
        android:layout_marginTop="150dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/lg_emailAddress"
        android:layout_marginTop="-3dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/password"
        android:layout_marginTop="-5dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/ConfirmPassword"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp" />



    <Button
        android:id="@+id/signUp"
        android:layout_width="402dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ConfirmPassword"
        android:layout_alignLeft="@+id/password"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/login_button"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="SIGN UP"
        android:textColor="@color/White" />

    <CheckBox
        android:id="@+id/terms"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ConfirmPassword"
        android:layout_alignLeft="@+id/password"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="103dp"
        android:fontFamily="arial"
        android:text="@string/terms"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />
</RelativeLayout>